<resources>
    <string name="app_name">CryptPass</string>
    <string name="username">Username</string>
    <string name="title_activity_new_username_and_password">NewUsernameAndPassword</string>
    <string name="lower_abcd">abcd</string>
    <string name="abcd">ABCD</string>
    <string name="_0123">0123</string>
    <string name="symbols">!@#$</string>
    <string name="entries">Generate</string>
    <string name="_16">16</string>
    <string name="_12">12</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="username_display">Username</string>
    <string name="password_display">Password</string>
    <string name="new_entry">New Entry</string>
    <string name="hint">Hint</string>
    <string name="short_hint_for_example_github">Short hint. For example \'Github\'</string>
    <string name="delete_all">Delete All</string>
    <string name="secret_question">Secret Question</string>
    <string name="secret_answer">Secret Answer</string>
    <string name="add_new">Add New</string>
</resources>
