<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password" />

    <LinearLayout
        android:id="@+id/checkbox_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/upp_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/abcd" />

        <CheckBox
            android:id="@+id/low_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lower_abcd" />

        <CheckBox
            android:id="@+id/num_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0123" />

        <CheckBox
            android:id="@+id/sym_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/symbols" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radiobutton_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_password_container"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_4" />

        <RadioButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8" />

        <RadioButton
            android:id="@+id/twelve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_12" />

        <RadioButton
            android:id="@+id/sixteen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_16" />
    </LinearLayout>

    <Button
        android:id="@+id/button_password_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobutton_password_container"
        android:layout_margin="10dp"
        android:text="@string/generate" />

</RelativeLayout>