<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <LinearLayout
        android:id="@+id/checkbox_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/uppercase_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/abcd"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/lowercase_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lower_abcd"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/number_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0123"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/symbol_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/symbols"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radiobutton_username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_username_container"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/four_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/eight_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/twelve_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/sixteen_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_16"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_username_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiobutton_username_container"
        android:layout_margin="10dp"
        android:text="@string/generate" />

</RelativeLayout>