<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/new_entry"
            android:textColor="#000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/title"
            android:textColor="#000"
            android:hint="@string/username" />


        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/username_field"
            android:textColor="#000"
            android:hint="@string/password" />

        <LinearLayout
            android:id="@+id/checkbox_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/upp_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/abcd" />

            <CheckBox
                android:id="@+id/low_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/lower_abcd" />

            <CheckBox
                android:id="@+id/num_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/_0123" />

            <CheckBox
                android:id="@+id/sym_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/symbols" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiobutton_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_password_container"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/_8" />

            <RadioButton
                android:id="@+id/twelve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/_12" />

            <RadioButton
                android:id="@+id/sixteen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/_16" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_password_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radiobutton_password_container"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#0000FF"
            android:background="#FFF"
            android:text="@string/entries" />

        <EditText
            android:id="@+id/hint_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:maxLength="15"
            android:layout_below="@id/btn_password_generate"
            android:textColor="#000"
            android:hint="@string/short_hint_for_example_github" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint_field"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#00FF00"
            android:background="#FFF"
            android:text="@string/save" />

    </RelativeLayout>

</ScrollView>